--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
-<title>Portfolio Website</title>
+<meta charset="utf-8">
+<link rel= "stylesheet" type="text/css" href="style.css">
+<title>Nivi Portfolio </title> <!-- SEO -->
+<meta name= "viewport" content= "initial-scale=1"/> <!-- Making the website compatible across different platforms -->
 </head>
 <body>
-<h1>Nivi Harishankar</h1>
+<h1>Nivi</h1>
+<header>
+  <nav>
+    
+  </nav>
+</header>
 </body>
 </html>
