--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang = "en">
 <head>
 <meta charset="utf-8">
-<link rel= "stylesheet" type="text/css" href="style.css">
+<link rel= "stylesheet" type="text/css" href="style.css" />
 <title>Nivi Portfolio </title> <!-- SEO -->
 <meta name= "viewport" content= "initial-scale=1"/> <!-- Making the website compatible across different platforms -->
 </head>
 <body>
 <h1>Nivi</h1>
-<header>
+<header class = "mainheader">
+      <img src= "https://drive.google.com/a/apps.tcnj.edu/?tab=mo#folders/0B717f5a3InwPaDY5ZjhaV0oyNEk" alt= "Nivi Logo">
   <nav>
     
   </nav>
