--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Nivi</h1>
 <header class = "mainheader">
-      <img src= "https://drive.google.com/a/apps.tcnj.edu/?tab=mo#folders/0B717f5a3InwPaDY5ZjhaV0oyNEk" alt= "Nivi Logo">
+      <img src= "http://drive.google.com/uc?export=view&id=0B717f5a3InwPYVVwZ2VPQi1JY3M" alt= "Nivi Logo">
   <nav>
     
   </nav>
