--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <title>Nivi Portfolio </title> <!-- SEO -->
 <meta name= "viewport" content= "initial-scale=1"/> <!-- Making the website compatible across different platforms -->
 </head>
-<body>
-<h1>Nivi</h1>
+<body class ="body">
+
 <header class = "mainheader">
-      <img src= "http://drive.google.com/uc?export=view&id=0B717f5a3InwPYVVwZ2VPQi1JY3M" alt= "Nivi Logo">
+      <img src= "http://drive.google.com/uc?export=view&id=0B717f5a3InwPYVVwZ2VPQi1JY3M" alt= "Nivi Logo" width ="800" height = "600">
   <nav>
     
   </nav>
