--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <header class = "mainheader">
       <img src= "http://drive.google.com/uc?export=view&id=0B717f5a3InwPYVVwZ2VPQi1JY3M" alt= "Nivi Logo" width ="640" height = "360">
-  <nav>
+  <nav><ul>
+        <li><a href="#"> Home</a></li>
+        <li><a href="#"> Home</a></li>
+  </ul>
     
   </nav>
 </header>
