--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </article>
         
         <footer class ="homeFooter">
-              <p> Follow on: </p>
+              <p> Copyright &copy;</p>
+              <p2></p2>Follow on: </p2>
         </footer>
   </div>
 
