--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </article>
         
         <footer class ="homeFooter">
-              <p> Copyright &copy;</p>
+              <p> Copyright &copy; 2014</p>
               <p2></p2>Follow on: </p2>
         </footer>
   </div>
