--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
 <meta charset="utf-8">
-<link rel= "stylesheet" type="text/css" href="./styles/style.css" />
+<link rel= "stylesheet" type="text/css" href="./styles/style.css">
 <title>Nivi Portfolio </title> <!-- SEO -->
 <meta name= "viewport" content= "initial-scale=1"/> <!-- Making the website compatible across different platforms -->
 </head>
