--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang = "en">
 <head>
 <meta charset="utf-8">
+<link href='http://fonts.googleapis.com/css?family=Noto+Sans&subset=cyrillic-ext' rel='stylesheet' type='text/css'>
 <link rel= "stylesheet" type="text/css" href="./styles/style.css">
 <title>Nivi Portfolio </title> <!-- SEO -->
 <meta name= "viewport" content= "initial-scale=1"/> <!-- Making the website compatible across different platforms -->
