--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class ="body">
 
-<header class = "mainheader">
+<header class = "homeHeader">
       <img src= "http://drive.google.com/uc?export=view&id=0B717f5a3InwPYVVwZ2VPQi1JY3M" alt= "Nivi Logo" width ="640" height = "360">
   <nav><ul>
         <li><a href="#">About</a></li>
