--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header class = "homeHeader">
       <img src= "http://drive.google.com/uc?export=view&id=0B717f5a3InwPYVVwZ2VPQi1JY3M" alt= "Nivi Logo" width ="640" height = "360">
   <nav><ul>
-        <li class = "active"><a href="home.html">Home</a></li>
+        <li class = "active"><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
