--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
   
   <div class = "main">
-        <article class= "home content">
+        <article class= "homeContent">
               <header> 
                     <h2> Recent Works</h2>
               </header>
