--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
   <div class = "main">
         <article class= "homeContent">
-              <header> 
+              <header class= "recentWorks"> 
                     <h2> Recent Works</h2>
               </header>
         </article>
