--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,45 @@
 <!DOCTYPE html>
+<html lang = "en">
+<head>
+<meta charset="utf-8">
+<link href='http://fonts.googleapis.com/css?family=Noto+Sans&subset=cyrillic-ext' rel='stylesheet' type='text/css'>
+<link rel= "stylesheet" type="text/css" href="./styles/style.css">
+<title>Nivi Portfolio </title> <!-- SEO -->
+<meta name= "viewport" content= "initial-scale=1"/> <!-- Making the website compatible across different platforms -->
+</head>
+<body class ="body">
 
-
+<header class = "homeHeader">
+      <img src= "http://drive.google.com/uc?export=view&id=0B717f5a3InwPYVVwZ2VPQi1JY3M" alt= "Nivi Logo" width ="640" height = "360">
+  <nav><ul>
+        <li><a href="index.html">Home</a></li>
+        <li class = "active"><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
+  </ul></nav>
+  </header>
+  
+  <div class = "mainContent">
+            <div class= "content">
+        <article class= "homeContent">
+              <header> 
+                    <h2>My Portfolio</h2>
+              </header>
+              
+              <content>
+                    <nav><ul>
+                      <li>Animation</li>
+                      <li>Art</li>
+                      <li>Photography</li>
+                       </ul></nav>
+              </content>
+        </article>
+        </div>
+        </div>
+        
+        <footer class ="homeFooter">
+              <p> Copyright &copy; 2014</p>
+              <p2></p2>Follow on: </p2>
+        </footer>
+</body>
 </html>
