--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
         <footer class ="homeFooter">
               <p> Copyright &copy; 2014</p>
-              <p2></p2>Follow on: </p2>
+              <p>Follow on: </p>
         </footer>
 </body>
 </html>
