--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   </ul></nav>
   </header>
   
+  <script src="./scripts/myjavascript.js"></script>
+  
   <div class = "mainContent">
             <div class= "content">
         <article class= "homeContent">
