--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
   </ul></nav>
   </header>
   
-  <script src="./scripts/myjavascript.js"></script>
+  <!-- Slideshow code -->
+  <div id="slider1_container" style="position: relative; top: 0px; left: 0px; width: 600px; height: 300px;">
+    <!-- Slides Container -->
+    <div u="slides" style="cursor: move; position: absolute; overflow: hidden; left: 0px; top: 0px; width: 600px; height: 300px;">
+        <div><img u="image" src="image1.jpg" /></div>
+        <div><img u="image" src="image2.jpg" /></div>
+    </div>
+    <!-- Trigger -->
+    <script>jssor_slider1_starter('slider1_container');</script>
+</div>
   
   <div class = "mainContent">
             <div class= "content">
