--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <div id="slider1_container" style="position: relative; top: 0px; left: 0px; width: 600px; height: 300px;">
     <!-- Slides Container -->
     <div u="slides" style="cursor: move; position: absolute; overflow: hidden; left: 0px; top: 0px; width: 600px; height: 300px;">
-        <div><img u="image" src="image1.jpg" /></div>
-        <div><img u="image" src="image2.jpg" /></div>
+        <div><img u="image" src="http://drive.google.com/uc?export=view&id=0B717f5a3InwPaDY5ZjhaV0oyNEk" /></div>
+        <div><img u="image" src="http://drive.google.com/uc?export=view&id=0B717f5a3InwPaDY5ZjhaV0oyNEk" /></div>
     </div>
     <!-- Trigger -->
     <script>jssor_slider1_starter('slider1_container');</script>
@@ -55,5 +55,7 @@
               <p> Copyright &copy; 2014</p>
               <p>Follow on: </p>
         </footer>
+        
+        <script src="slider.js"></script>
 </body>
 </html>
