--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         
         <footer class ="homeFooter">
               <p> Copyright &copy; 2014</p>
-              <p2></p2>Follow on: </p2>
+              <p1>Follow on: </p1>
         </footer>
 </body>
 </html>
